cluster/base/taskboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskboard
  namespace: taskboard
  labels:
    app: taskboard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: taskboard
  template:
    metadata:
      labels:
        app: taskboard
    spec:
      nodeSelector:
        node-role.kubernetes.io/storage: "true"
      containers:
      - name: taskboard
        image: dzahariev/taskboard:1.25
        ports:
        - containerPort: 8800
          name: http
        volumeMounts:
        - name: tasks
          mountPath: /tasks
        - name: keycloak-cfg
          mountPath: /public/keycloak-cfg/keycloak.json
          subPath: keycloak.json
          readOnly: true
        - name: configuration
          mountPath: /tasks/configuration.json
          subPath: configuration.json
          readOnly: true
      volumes:
      - name: tasks
        persistentVolumeClaim:
          claimName: taskboard-tasks
      - name: keycloak-cfg
        configMap:
          name: taskboard-keycloak-cfg
      - name: configuration
        configMap:
          name: taskboard-configuration
